--- a/Jogos.html
+++ b/Jogos.html
@@ -19,7 +19,7 @@
                         <img class="ImgBarra" src="assets/IMG/Logo.jpg" alt="Logotipo da loja" width="35px">                       
                     </div>
                     <div class="col-1 Guia text-center">
-                        <a href="INDEX.html"><p>Home</p></a>                    
+                        <a href="index.html"><p>Home</p></a>                    
                     </div>
                     <div class="col-1 Guia text-center">
                         <a href="Jogos.html"><p>Jogos</p></a>                    
@@ -52,7 +52,7 @@
                             <input class="JogosPesquisa" id="PesquisaMarcador" />
                         </div>
                         <div class="col-1">
-                            <button class="BPesquisa" type="submit">
+                            <button class=" Botão BPesquisa" type="submit">
                                 <span>Buscar</span>
                             </button>
                         </div>
@@ -73,7 +73,9 @@
                         <div class="card-body">
                           <h5 class="card-title">GTA V</h5>
                           <p class="card-text">Grand Theft Auto V é um jogo eletrônico de ação-aventura que pode ser jogado a partir de uma perspectiva em terceira pessoa ou primeira pessoa, porém esta última é disponível apenas nas plataformas PlayStation 4, Xbox One e Microsoft Windows.</p>
-                          <button class="jogar" type="submit"><img src='/assets/IMG/Play.png' width="20px"/></button>
+                          <button class="Botão Jogar" type="submit">
+                            <span>Jogar</span>
+                          </button>
                           <p class="card-text"><small class="text-muted">17 de setembro de 2013</small></p>
                         </div>
                     </div>
@@ -82,6 +84,9 @@
                         <div class="card-body">
                           <h5 class="card-title">God of War</h5>
                           <p class="card-text">God of War é um jogo eletrônico de ação-aventura desenvolvido pela Santa Monica Studio e publicado pela Sony Interactive Entertainment. disponível para PlayStation e Microsoft Windows.</p>
+                          <button class="Botão Jogar" type="submit">
+                            <span>Jogar</span>
+                          </button>
                           <p class="card-text"><small class="text-muted">20 de abril de 2018</small></p>
                         </div>
                     </div>
@@ -90,6 +95,9 @@
                         <div class="card-body">
                           <h5 class="card-title">Mortal Kombat 11</h5>
                           <p class="card-text">Mortal Kombat 11 é um jogo eletrônico de luta desenvolvido pela NetherRealm Studios e publicado pela Warner Bros. Interactive Entertainment. É a décima primeira edição principal da série de jogos eletrônicos de luta, Mortal Kombat, e uma continuação direta de Mortal Kombat X</p>
+                          <button class="Botão Jogar" type="submit">
+                            <span>Jogar</span>
+                          </button>
                           <p class="card-text"><small class="text-muted">22 de abril de 2019</small></p>
                         </div>
                     </div>
@@ -98,6 +106,9 @@
                         <div class="card-body">
                           <h5 class="card-title">The Legend of Zelda: Breath of the Wild</h5>
                           <p class="card-text">The Legend of Zelda: Breath of the Wild é um jogo eletrônico de ação-aventura desenvolvido pela Nintendo Entertainment Planning & Development e publicado pela Nintendo. É o décimo nono título da série The Legend of Zelda e foi lançado mundialmente para Wii U e Nintendo Switch.</p>
+                          <button class="Botão Jogar" type="submit">
+                            <span>Jogar</span>
+                          </button>
                           <p class="card-text"><small class="text-muted">3 de março de 2017</small></p>
                         </div>
                     </div>
@@ -157,6 +168,37 @@
                           FromSoftware
                         </li>
                     </ul>
+                    <div class="card mt-3">
+                      <div class="card-header">
+                        Classificação Indicativa
+                      </div>
+                  </div>
+                  <ul class="list-group">
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Livre
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        10+
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        12+
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        14+
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        16+
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        18+
+                      </li>
+                  </ul>
                 </div>
                 <div class="col-1">
 
@@ -164,4 +206,4 @@
             </div>
         </div>
     </container>
-</body>class="container mt-5">
+</body>
