--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                         <img class="ImgBarra" src="assets/IMG/Logo.jpg" alt="Logotipo da loja" width="35px">                       
                     </div>
                     <div class="col-1 Guia text-center">
-                        <a href="INDEX.html"><p>Home</p></a>                    
+                        <a href="index.html"><p>Home</p></a>                    
                     </div>
                     <div class="col-1 Guia text-center">
                         <a href="Jogos.html"><p>Jogos</p></a>                    
                     </div>
                     <div class="col-1 Guia text-center">
-                        <p>Loja</p>                    
+                        <p>Assinatura</p>                    
                     </div>
                     <div class="col-1 Guia text-center">
                         <p>Suporte</p>                    
