--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p>Assinatura</p>                    
                     </div>
                     <div class="col-1 Guia text-center">
-                        <p>Suporte</p>                    
+                        <a href="Contato.html"><p>Contato</p></a>                 
                     </div>
                     <div class="col-3">
                                      
