--- a/Assinatura.html
+++ b/Assinatura.html
@@ -10,51 +10,50 @@
     <title>Assinatura</title>
 </head>
 <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="assets/IMG/logo1.gif" alt="" width="40" height="34" class="d-inline-block align-text-top">
-            Crosspass
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Contato.html">Contato</a>
-              </li>
-              <li class="nav-item">
-                <div class="dropdown">
-                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Perfil
-                  </a>
-                
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="Perfil.html">Perfil</a>
-                    <a class="dropdown-item" href="login.html">login</a>
-                    <a class="dropdown-item" href="cadastro.html">Cadastro</a>
-                  </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="assets/IMG/logo1.gif" alt="" width="40" height="34" class="d-inline-block align-text-top">
+          Crosspass
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Contato.html">Contato</a>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Perfil
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="Perfil.html">Perfil</a>
+                  <a class="dropdown-item" href="login.html">login</a>
+                  <a class="dropdown-item" href="cadastro.html">Cadastro</a>
                 </div>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="O que vamos jogar?" aria-label="Search">
-              <button class="btn btn-outline-info" type="submit">Pesquisar</button>
-            </form>
-          </div>
+              </div>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="O que vamos jogar?" aria-label="Search">
+            <button class="btn btn-outline-info" type="submit">Pesquisar</button>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
     </header>
     <section class="title">
       <div>
@@ -150,49 +149,62 @@
       </div>
     </div>
     <container>
-      <div class="row-fluid">
-        <div class="col justify-content-center">
-          <video width=100% height=480; autoplay muted loop style="background-color:#03989E;">
-            <source src="assets/VIDEO/pegue e jogue.mp4" type="video/mp4">
-          </video>
+      <div class="row card-group" style="background-color: whitesmoke; width: 100%; margin: 0; padding-top: 5%; padding-bottom: 3%;">
+        <div class="col-1"></div>
+        <div class="col-8">
+          <div class="row">
+            <h1>(eu pensei em por um dropdown aqui mas pode ser estatico tambem, pode mudar a cor se quiser)</h1>
+            <h1>Perguntas Frequentes</h1>
+          </div>
+          <div class="row">
+            <p>> O que é CrossPass? (Beta)</p> 
+          </div>
+          <div class="row">
+            <p>> Como posso começar a jogar um jogo pela nuvem?</p>
+          </div>
+          <div class="row">
+            <p>> Quais jogos estão disponíveis?</p>
+          </div>
+          <div class="row">
+            <p>> Como faço para interromper a cobrança recorrente?</p>
+          </div>
+          <div class="row">
+            <p>> Onde vejo uma lista completa de dispositivos compatíveis?</p>
+          </div>
         </div>
+        <div class="col-3"></div>
+      </div>
     </container>
     <footer>
-      <div class="row-fluid card-group" style="color: white; background-color: #171a1d; height: 300px;">
-        <div class="col-2"> 
-
-        </div>
-        <div class="col-3">
-          <h1 style=" font-size: 20px; color: #0dcaf0; margin-top: 25px;">Redes sociais</h1>
+      <div class="row-fluid card-group"style="color: white; background-color: #171a1d; height: 160px;"> 
+        <div class="col-2"></div>
+        <div class="col-3"  style="text-align: justify;">
+          <h1 style="text-align: justify; font-size: 20px; color: #0dcaf0; margin-top: 25px;">Redes sociais</h1>
           <p>Facebook</p>
           <p>Instagram</p>
           <p>Twitter</p>
           <p>YouTube</p>
         </div>
-        <div class="col-3">
-          <h1 style="font-size: 20px;color: #0dcaf0; margin-top: 25px;">Desenvolvido por</h1>
+        <div class="col-3" style="text-align: justify;">
+          <h1 style="text-align: justify;  font-size: 20px;color: #0dcaf0; margin-top: 25px;">Desenvolvido por</h1>
           <p>Gustavo Alexandre de Carvalho</p>
           <p>Jonathan Araujo Lopes</p>
           <p>Rafaela Ferreira Dos Santos</p>
         </div>
-        <div class="col-2">
-          <h1 style=" font-size: 20px; color: #0dcaf0; margin-top: 25px;">Contato</h1>
+        <div class="col-3" style="text-align: justify;">
+          <h1 style=" text-align: justify; font-size: 20px; color: #0dcaf0; margin-top: 25px;">Contato</h1>
           <p>crosspass@gmail.com</p>
           <p>(99) 9 9999-9999</p>
         </div>
-        <div class="col-2"> 
-
-        </div>
-        <div class="col-2">
-
-        </div>
-        <div class="col-7" style=" margin-top: -20px;">
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" 
-            src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />Este obra está licenciado com uma Licença <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" style="margin: 5%;">Creative Commons Atribuição-CompartilhaIgual 4.0 Internacional</a>
-        </div>
-        <div class="col-3">
-
-        </div>
+      </div>
+      <div class="row-fluid card-group justify-content-center" style="background-color:#171a1d; color: white; padding-top: 1%;">
+        <div class="col-2"></div>
+        <div class="col-10">
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" class="img-fluid" style="border-width:0; width: auto; margin-bottom: 0px;" 
+            src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />Este obra está licenciado com uma Licença <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" 
+            style="margin: 5%;">Creative Commons Atribuição-CompartilhaIgual 4.0 Internacional</a>
+          <div class="col-2" style="margin-bottom: 2%;"></div>
+          </div>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
