--- a/Assinatura.html
+++ b/Assinatura.html
@@ -149,27 +149,26 @@
       </div>
     </div>
     <container>
-      <div class="row card-group" style="background-color: whitesmoke; width: 100%; margin: 0; padding-top: 5%; padding-bottom: 3%;">
+      <div class="row card-group" style="background-color: #03989E; width: 100%; margin: 0; padding-top: 5%; padding-bottom: 3%;">
         <div class="col-1"></div>
-        <div class="col-8">
+        <div class="col-8" style="background-color: #03989E;">
           <div class="row">
-            <h1>(eu pensei em por um dropdown aqui mas pode ser estatico tambem, pode mudar a cor se quiser)</h1>
-            <h1>Perguntas Frequentes</h1>
+            <h1 style="color: black; font-size: 40px;">Perguntas Frequentes</h1>
           </div>
           <div class="row">
-            <p>> O que é CrossPass? (Beta)</p> 
+            <p style="color: white;" >> O que é CrossPass? (Beta)</p> 
           </div>
           <div class="row">
-            <p>> Como posso começar a jogar um jogo pela nuvem?</p>
+            <p style="color: white;" >> Como posso começar a jogar um jogo pela nuvem?</p>
           </div>
           <div class="row">
-            <p>> Quais jogos estão disponíveis?</p>
+            <p style="color: white;" >> Quais jogos estão disponíveis?</p>
           </div>
           <div class="row">
-            <p>> Como faço para interromper a cobrança recorrente?</p>
+            <p style="color: white;" >> Como faço para interromper a cobrança recorrente?</p>
           </div>
           <div class="row">
-            <p>> Onde vejo uma lista completa de dispositivos compatíveis?</p>
+            <p style="color: white;" >> Onde vejo uma lista completa de dispositivos compatíveis?</p>
           </div>
         </div>
         <div class="col-3"></div>
