--- a/jogos.html
+++ b/jogos.html
@@ -13,7 +13,7 @@
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <title>Jogos</title>
     </head>
-<body>
+<body onload="fetchJogos()" >
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
           <div class="container-fluid">
@@ -322,32 +322,7 @@
     <container>
         <div class="row-fluid card-group">
             <div class="col-1"></div>
-            <div class="col-10 card-group">
-                <div class="col-3">
-                  <img src="assets/IMG/cyberpunk-2077_444.jpg" class="img-fluid" alt="...">
-                  <p>Cyberpunk 2077</p>
-                  <button type="submit" class="btn btn-outline-info" >Jogar</button>
-                </div>
-                <div class="col-3">
-                  <img src="assets/IMG/theWitcher3333.jpg" class="img-fluid" alt="...">
-                  <p>The witcher III</p>
-                  <button type="submit" class="btn btn-outline-info" >Jogar</button>
-                </div>
-                <div class="col-3">
-                  <img src="assets/IMG/Back-4-Blood-2-900x503.jpg" class="img-fluid" alt="...">
-                  <p>Back 4 Blood</p>
-                  <button type="submit" class="btn btn-outline-info" >Jogar</button>
-                </div>
-                <div class="col-3">
-                  <img src="assets/IMG/deathloop.webp" class="img-fluid" alt="...">
-                  <p>Deathloop</p>
-                  <button type="submit" class="btn btn-outline-info" >Jogar</button>
-                </div>
-                <div class="col-3">
-                  <img src="assets/IMG/Uncharted222.jpg" class="img-fluid" alt="...">
-                  <p>Uncharted 4</p>
-                  <button type="submit" class="btn btn-outline-info" >Jogar</button>
-                </div>
+            <div class="col-10 card-group" id="aqui">
                 <div class="col-3">
                   <img src="assets/IMG/hellblade.jpeg" class="img-fluid" alt="...">
                   <p>hellblade</p>
@@ -449,6 +424,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
+    <script src="scripts/script.js"></script>
 </body>
 </html>
