--- a/Perfil.html
+++ b/Perfil.html
@@ -32,7 +32,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
+                <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
@@ -115,7 +115,7 @@
                       <img src="/assets/IMG/godOfWar432.jpg" alt="jogos god of war 4" class="img-fluid" style="max-height: 100%;">
                       <div class="InfosJogados">
                         <h3>God of War 4</h3>
-                        <P>Horas jogas: 23hrs</P>
+                        <P>Horas jogadas: 23hrs</P>
                         <p>Consquistas: 25</p>
                         <p>Progresso: 25%</p>
                       </div>
@@ -125,7 +125,7 @@
                     <img src="/assets/IMG/assassin_s creed valhalla.jpg" alt="jogos Assasins creed valhalla" class="img-fluid" style="max-height: 100%;">
                     <div class="InfosJogados">
                       <h3>Assasins creed valhalla</h3>
-                      <P>Horas jogas: 3hrs</P>
+                      <P>Horas jogadas: 3hrs</P>
                       <p>Consquistas: 5</p>
                       <p>Progresso: 15%</p>
                     </div>
@@ -134,7 +134,7 @@
                     <img src="/assets/IMG/cyberpunk-2077_444.jpg" alt="CyberPunk 2077" class="img-fluid" style="max-height: 100%;">
                     <div class="InfosJogados">
                       <h3>CyberPunk 2077</h3>
-                      <P>Horas jogas: 55hrs</P>
+                      <P>Horas jogadas: 55hrs</P>
                       <p>Consquistas: 47</p>
                       <p>Progresso: 88%</p>
                     </div>
@@ -143,7 +143,7 @@
                     <img src="/assets/IMG/eFootball-PES-2020-LITE.jpg" alt="CyberPunk 2077" class="img-fluid" style="max-height: 100%;">
                     <div class="InfosJogados">
                       <h3>PES 2020</h3>
-                      <P>Horas jogas: 35hrs</P>
+                      <P>Horas jogadas: 35hrs</P>
                       <p>Consquistas: 10</p>
                       <p>Progresso: 18%</p>
                     </div>
