--- a/cadastro-cartao.html
+++ b/cadastro-cartao.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
+                <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
@@ -65,26 +65,37 @@
                       <div class="form-floating mb-3 mt-3">
                         <input type="text" class="form-control campo" id="floatingInputNome" placeholder="cartão 1">
                         <label for="floatingInputNome">Nome do cartão</label>
+                        <div id="alertNome" class="alert alert-danger alerta" role="alert">
+                          Seu nome deve conter entre 5 a 50 caracteres!
+                        </div>
                       </div>
                       <div class="form-floating mb-3">
                         <input type="number" class="form-control campo" id="floatingNumero" placeholder="0000.0000.0000-00">
                         <label for="floatingNumero">Número do cartão</label>
+                        <div id="alertNumero" class="alert alert-danger alerta" role="alert">
+                          Seu número de cartão deve conter 16 números!
+                        </div>
                       </div>
                       <div class="form-floating mb-3">
                         <input type="month" class="form-control campo" id="floatingInputMes" placeholder="Mês">
                         <label for="floatingInputMes">Data de vencimento do cartão</label>
-  
                       </div>
                       <div class="form-floating mb-3">
                         <input type="text" class="form-control campo" id="floatingInputNomecartao" placeholder="José">
                         <label for="floatingInputNomecartao">Nome no cartão de crédito</label>
+                        <div id="alertNomeCartao" class="alert alert-danger alerta" role="alert">
+                          Seu nome no cartão deve conter entre 5 a 50 caracteres!
+                        </div>
                       </div>
                       <div class="form-floating mb-3">
                         <input type="number" class="form-control campo" id="floatingInputCodigo" placeholder="000">
                         <label for="floatingInputCodigo">Código de segurança</label>
+                        <div id="alertCodigo" class="alert alert-danger alerta" role="alert">
+                          Seu número de segurança do cartão deve conter 3 números!
+                        </div>
                       </div>
                       <div class="butoes">
-                        <button type="submit" class="btn btn-outline-info button_Logar">Cadastrar cartão</button> 
+                        <button type="submit" disabled id="buttonCadastrar" class="btn btn-outline-info button_Logar">Cadastrar cartão</button> 
                         <button type="reset"  class="btn btn-outline-info button_Limpar">Limpar informações</button> 
                       </div>
                     </form>  
@@ -138,6 +149,7 @@
         </div>
       </div>
     </footer>
+    <script src="scripts/cartao.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
