--- a/cadastro.html
+++ b/cadastro.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
+                <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
@@ -64,6 +64,9 @@
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control campo" id="floatingInputName" placeholder="name example">
                         <label for="floatingInputName">Insira seu Nome</label>
+                        <div id="alertNome" class="alert alert-danger alerta" role="alert">
+                          Seu nome deve conter entre 5 a 50 caracteres!
+                        </div>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="date" class="form-control campo" id="floatingInputNascimento" placeholder="00/00/00">
@@ -72,17 +75,26 @@
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control campo" id="floatingInputPais" placeholder="NomePaís">
                         <label for="floatingInputPais">Insira seu País</label>
+                        <div id="alertPais" class="alert alert-danger alerta" role="alert">
+                          O seu país deve ser preenchido
+                        </div>
                     </div>
                     <div class="form-floating mb-3">
                       <input type="email" class="form-control campo" id="floatingInput" placeholder="name@example.com">
                       <label for="floatingInput">Insira seu Email</label>
+                      <div id="alertEmail" class="alert alert-danger alerta" role="alert">
+                        O email deve conter no minimo 5 caracteres!
+                      </div>
                     </div>
                     <div class="form-floating mb-3">
                       <input type="password" class="form-control campo" id="floatingPassword" placeholder="Password">
                       <label for="floatingPassword">Crie uma senha</label>
+                      <div id="alertSenha" class="alert alert-danger alerta" role="alert">
+                        A senha deve possuir no minimo 8 caracteres
                       </div>
+                    </div>
                     <h6 class="card-subtitle mb-3 text-muted criarConta"><a href="login.html">Caso já tenha uma conta!! <span style="color: aqua;">faça login!</span></a></h6>
-                    <button type="submit" class="btn btn-outline-info button_Logar">Cadastrar</button>       
+                    <button disabled id="buttonCadastrar" type="submit" class="btn btn-outline-info button_Logar">Cadastrar</button>       
                 </div>
             </div>
           </div>
@@ -133,6 +145,7 @@
         </div>
       </div>
     </footer>
+    <script src="scripts/cadastro.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
