--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
+              <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="Assinatura.html">Assinatura</a>
